fix gap down right hand edge

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body{
     width: 100%;
     height: 100%;
     background-image: linear-gradient(rgb(50, 100, 102), black); 
-    text-shadow: 0 .3rem .5rem rgba(0, 0, 0, .9); 
+    text-shadow: 0 .5rem .5rem rgba(0, 0, 0, .9); 
     
     
 }
@@ -179,7 +179,6 @@ nav ul{
     width: 100%;
     display: flex;
     list-style-type: none;
-    margin: 10px;
     text-align: center;
 }
 
